# csv_parser_rs

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile.toml  README.md  TODO.md  _build.rs  build.rs  rust-toolchain.toml  rustfmt.toml
.github/workflows/: build.yml  docs.yml  draft.yml  format.yml  lint.yml  publish.yml  release.yml  test.yml
res/: resource.rc
src/: csv_pipeline.rs  error.rs  levenshtein.rs  macros.rs  main.rs  prelude.rs  processor.rs  retained.rs  state.rs
src/cli/: mod.rs
src/config/: core.rs  file_path_finds.rs  folder_types.rs  mod.rs
src/processing/: handler.rs  mod.rs  output.rs  processor.rs
