cargo-features = ["codegen-backend"]

[package]
name = "csv_parser_rs"
version = "2.0.0"
edition = "2021"
description = "A CLI tool to parse a CSV file and filter out rows based on a set of criteria."
license = "MIT"
readme = "README.md"

#build = "build.rs"

#[package.metadata.winresource]
#OriginalFilename = "csv_parser_rs.exe"
#FileDescription = "A CLI tool to parse a CSV file and filter out rows based on a set of criteria."
#LegalCopyright = "Copyright © 2025"

#[target.'cfg(windows)'.build-dependencies]
#windres = "0.2"

#[build-dependencies]
#winresource = "0.1.19"
#windres = "0.2.2"
#winapi = { version = "0.3.9" }

[dependencies]
clap = { version = "4.5.23", features = ["cargo", "derive", "env"] }
config = { version = "0.15.4", features = ["preserve_order"] }
csv = "1.3.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
anstyle = "1.0.10"
regex = "1.11.1"

thiserror = "*"
rayon = "1.10.0"
chrono = "0.4.39"


[dev-dependencies]
tempdir = "0.3.7"
stderrlog = "0.6.0"
log = "0.4.22"

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1


[profile.dev]
opt-level = 1
codegen-units = 256
incremental = true
#rustflags = ["-Zthreads=16" ]

codegen-backend = "cranelift"

[profile.release]
opt-level = 3
codegen-units = 1
debug = "none"
debug-assertions = false
incremental = true

# trim-paths = "all"
#rustflags = ["-Zthreads=16" ]

# strip = "symbols" # Leave off @ w
# lto = "fat" ## Can't use with cranelift yet
# panic = "unwind"
